# react-native-qnn-llm

./: .gitignore  .release-it.json  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/qnnllm/: Constants.kt  Context.kt  QnnLlmModule.kt  QnnLlmPackage.kt
android/src/newarch/: QnnLlmSpec.kt
android/src/oldarch/: QnnLlmSpec.kt
cpp/: context.cpp  context.h  log.h  unpack.cpp  unpack.h
example/: app.json  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/qnnllm/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/QnnLlmExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/QnnLlmExample.xcodeproj/: project.pbxproj
example/ios/QnnLlmExample.xcodeproj/xcshareddata/xcschemes/: QnnLlmExample.xcscheme
example/src/: App.tsx
src/: NativeQnnLlm.ts  index.tsx
